--- a/inexor/libraries/CMakeLists.txt
+++ b/inexor/libraries/CMakeLists.txt
@@ -1,5 +1,193 @@
+# TODO: Write a lib detector that does the following: Search for cmake definitions; search for pkg-cfg's; search for libs and headers; everyting may be specified multiple times
+
 include(ExternalProject)
+find_package(PkgConfig)
+
 set(pwd "${CMAKE_CURRENT_SOURCE_DIR}")
+
+#### Debug
+
+function(config_debug targ)
+  message(STATUS "Configuring ${targ} with Cocoa")
+  if (";${ARGN};" MATCHES ";NOLINK;")
+    set(NOLINK "NOLINK")
+  endif()
+
+  if (NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
+    return()
+  endif()
+
+  if (MSVC)
+    target_link_libs(${targ} dbghelp)
+  endif()
+endfunction()
+
+#### Cocoa/OSX
+
+function(config_cocoa targ)
+  message(STATUS "Configuring ${targ} with Cocoa")
+  if (";${ARGN};" MATCHES ";NOLINK;")
+    set(NOLINK "NOLINK")
+  endif()
+
+
+  if (OS_MACOSX)
+    target_link_libs(${targ} CoreServices Cocoa ${NOLINK})
+  endif()
+endfunction()
+
+#### Threads
+
+set(THREADS_PREFER_PTHREAD_FLAG 1)
+
+if (NOT THREADAPI)
+  find_package(Threads REQUIRED)
+  message(STATUS "DETECTING ${CMAKE_USE_PTHREADS_INIT} : ${CMAKE_HP_PTHREADS_INIT} : ${CMAKE_USE_WIN32_THREADS_INIT}")
+
+  if (CMAKE_USE_PTHREADS_INIT OR CMAKE_HP_PTHREADS_INIT)
+    set(THREADAPI "pthreads" CACHE INTERN "")
+    message(STATUS "threadapi=pthreads")
+  elseif(CMAKE_USE_WIN32_THREADS_INIT)
+    set(THREADAPI "win32" CACHE INTERN "")
+  endif()
+endif()
+
+if (THREADAPI STREQUAL "pthreads")
+  set(THREADAPI_PTHREADS 1 CACHE INTERN "")
+
+  find_libs(PTHREADS_LIBS pthread pthreadGC2 winpthread)
+  find_path(PTHREADS_INCLUDE_DIRS pthread.h)
+
+elseif(THREADAPI STREQUAL "win32")
+  set(THREADAPI_WIN32 1 CACHE INTERN "")
+endif()
+message(STATUS "THREADAPI : ${THREADAPI} : ${THREADAPI_PTHREADS} : ${PTHREADS_LIBS} : ${PTHREADS_INCLUDE_DIRS} : ${THREADAPI_WIN32}")
+
+function(config_threads targ)
+  message(STATUS "Configuring ${targ} with Threads (${THREADAPI})")
+  if (";${ARGN};" MATCHES ";NOLINK;")
+    set(NOLINK "NOLINK")
+  endif()
+
+  if (THREADAPI_PTHREADS)
+    target_link_libs(${targ} ${PTHREADS_LIBS} ${NOLINK})
+    include_directories(${PTHREADS_INCLUDE_DIRS})
+  elseif(THREADAPI_WIN32)
+    # pass
+  else()
+    message(SEND_ERROR "Unkown thread API: ${THREADAPI}")
+  endif()
+
+endfunction()
+
+#### OpenGL
+
+find_package(OpenGL)
+
+set(OPENGL_INCLUDE_DIRS ${OPENGL_INCLUDE_DIR} CACHE INTERN "")
+set(OPENGL_LIBS ${OPENGL_gl_LIBRARY} CACHE INTERN "")
+
+function(config_opengl targ)
+  message(STATUS "Configuring ${targ} with OpenGL (${OPENGL_LIBS})")
+  if (";${ARGN};" MATCHES ";NOLINK;")
+    set(NOLINK "NOLINK")
+  endif()
+
+  if (OPENGL_INCLUDE_DIRS)
+    include_directories("${OPENGL_INCLUDE_DIRS}")
+  endif()
+
+  target_link_libs(${targ} ${OPENGL_LIBS} ${NOLINK})
+endfunction()
+
+#### SDL
+
+find_libs(SDL2_LIBS SDL2 LIB SDL2_image LIB SDL2_mixer)
+
+find_path(SDL2_BASE_INCLUDE_DIRS  SDL.h       PATH_SUFFIXES SDL2)
+find_path(SDL2_IMAGE_INCLUDE_DIRS SDL_image.h PATH_SUFFIXES SDL2)
+find_path(SDL2_MIXER_INCLUDE_DIRS SDL_mixer.h PATH_SUFFIXES SDL2)
+set(SDL2_INCLUDE_DIRS
+  ${SDL2_BASE_INCLUDE_DIRS}
+  ${SDL2_IMAGE_INCLUDE_DIRS}
+  ${SDL2_MIXER_INCLUDE_DIRS} CACHE INTERN "")
+
+function(config_sdl targ)
+  message(STATUS "Configuring ${targ} with SDL")
+  if (";${ARGN};" MATCHES ";NOLINK;")
+    set(NOLINK "NOLINK")
+  endif()
+
+  include_directories(${SDL2_INCLUDE_DIRS})
+  target_link_libs(${targ} ${SDL2_LIBS} ${NOLINK})
+
+  if(OS_WINDOWS)
+    target_link_libs(${targ} winmm ${NOLINK})
+    add_definitions(-mwindows) # This is GUI!
+  elseif(OS_POSIX)
+    target_link_libs(${targ} dl rt ${NOLINK})
+  endif()
+
+  config_cocoa(${targ} ${NOLINK})
+  config_opengl(${targ} ${NOLINK})
+endfunction()
+
+#### ZLIB
+
+find_package(ZLIB)
+
+if (${ZLIB_FOUND})
+  set(ZLIB_LIBS ${ZLIB_LIBRARY} CACHE INTERN "")
+  set(ZLIB_INCLUDE_DIRS ${ZLIB_INCLUDE_DIR} CACHE INTERN "")
+else()
+  find_libs(ZLIB_LIBS z zlib1)
+  find_path(ZLIB_INCLUDE_DIRS zlib.h)
+
+  message(STATUS "ZLIB_LIBRARY2 = ${ZLIB_LIBRARY2}")
+  message(STATUS "ZLIB_INCLUDE_DIR2 = ${ZLIB_INCLUDE_DIR2}")
+
+  if (EXISTS ${ZLIB_LIBRARY} AND EXISTS ${ZLIB_INCLUDE_DIR})
+    set(ZLIB_FOUND 1)
+  else()
+    message(ERROR "Could not find zlib")
+  endif()
+endif()
+
+function(config_zlib targ)
+  message(STATUS "Configuring ${targ} with ZLIB")
+  if (";${ARGN};" MATCHES ";NOLINK;")
+    set(NOLINK "NOLINK")
+  endif()
+
+  target_link_libs(${targ} ${ZLIB_LIBS} ${NOLINK})
+  include_directories(${ZLIB_INCLUDE_DIRS})
+endfunction()
+
+#### ENET
+
+if (NOT ENET_COMPILE)
+  find_libs(ENET_LIBS enet)
+  find_path(ENET_INCLUDE_DIRS enet/enet.h)
+endif()
+
+if(NOT ENET_SYSTEM AND (NOT ENET_LIBS OR NOT ENET_INCLUDE_DIRS))
+    message(STATUS "Building local ENet")
+    add_subdirectory(libraries/enet)
+endif()
+
+function(config_enet targ)
+  message(STATUS "Configuring ${targ} with ENET")
+  if (";${ARGN};" MATCHES ";NOLINK;")
+    set(NOLINK "NOLINK")
+  endif()
+
+  include_directories(${ENET_INCLUDE_DIRS})
+  target_link_libs(${targ} ${ENET_LIBS} ${NOLINK})
+  if (OS_WINDOWS)
+    # Why does enet need winmm
+    target_link_libs(${targ} ws2_32 winmm ${NOLINK})
+  endif()
+endfunction()
 
 #### MUPARSER
 
@@ -21,9 +209,12 @@ add_library(module_muparser STATIC ${MUPARSER_SOURCES} ${headers})
 
 function(config_muparser targ)
   message(STATUS "Configuring ${targ} with muparser")
+  if (";${ARGN};" MATCHES ";NOLINK;")
+    set(NOLINK "NOLINK")
+  endif()
 
   include_directories(${MUPARSER_INCLUDE_DIRS})
-  target_link_libs(${targ} module_muparser)
+  target_link_libs(${targ} module_muparser ${NOLINK})
 endfunction()
 
 #### Googletest
@@ -32,6 +223,8 @@ set(GTEST_DIR "${pwd}/googletest" CACHE INTERNAL "")
 set(GTEST_INCLUDE_DIRS "${GTEST_DIR}/include"
   CACHE INTERNAL "")
 
+# NOTE: For some reason compiling with pthreads fails for win32;
+# can we fix this?
 set(gtest_args
       -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
       -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
@@ -60,8 +253,37 @@ set(GTEST_LIB_DIR ${BINARY_DIR} CACHE INTERN "")
 
 function(config_gtest targ)
   message(STATUS "Configuring ${targ} with google test")
+  if (";${ARGN};" MATCHES ";NOLINK;")
+    set(NOLINK "NOLINK")
+  endif()
 
   add_dependencies(${targ} build_gtest)
   include_directories(${GTEST_INCLUDE_DIRS})
-  target_link_libs(${targ} gtest)
+  target_link_libs(${targ} gtest ${NOLINK})
+endfunction()
+
+#### ASIO
+
+find_path(ASIO_INCLUDE_DIRS asio.hpp)
+
+if (NOT ${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
+  message(STATUS "Using ASIO in standalone mode")
+  set(ASIO_COMPILER_FLAGS -DASIO_STANDALONE CACHE INTERN "")
+else()
+  message(STATUS "Using ASIO with boost.")
+  set(ASIO_COMPILER_FLAGS "" CACHE INTERN "")
+endif()
+
+function(config_asio targ)
+  message(STATUS "Configuring ${targ} with asio")
+  if (";${ARGN};" MATCHES ";NOLINK;")
+    set(NOLINK "NOLINK")
+  endif()
+
+  add_definitions(${ASIO_COMPILER_FLAGS})
+  include_directories(${ASIO_INCLUDE_DIRS})
+
+  if (WIN32)
+    target_link_libs(${targ} ws2_32 ${NOLINK})
+  endif()
 endfunction()
