--- a/inexor/server/CMakeLists.txt
+++ b/inexor/server/CMakeLists.txt
@@ -4,8 +4,10 @@ prepend(SERVER_SOURCES_ENGINE ${SOURCE_DIR}/engine
 prepend(SERVER_SOURCES_FPSGAME ${SOURCE_DIR}/fpsgame
     server.cpp entities.cpp)
 
-set(SERVER_SOURCES ${SERVER_SOURCES_FPSGAME}
-  ${SERVER_SOURCES_ENGINE} ${COMMON_SOURCES}
+set(SERVER_SOURCES
+  ${SHARED_MODULE_SOURCES}
+  ${SERVER_SOURCES_FPSGAME}
+  ${SERVER_SOURCES_ENGINE}
   CACHE INTERNAL "")
 
 # Set Binary name
@@ -13,15 +15,11 @@ set(SERVER_BINARY server CACHE INTERNAL "Server binary name.")
 
 add_definitions(-DSERVER -DSTANDALONE)
 
-if(OS_LINUX)
-  set(ADDITIONAL_LIBRARIES ${ADDITIONAL_LIBRARIES} dl -pthread)
-endif()
-
 add_app(${SERVER_BINARY} ${SERVER_SOURCES})
 
-target_link_libs(${SERVER_BINARY} ${COMMON_LIBS}
-  ${ADDITIONAL_LIBRARIES})
-
+config_threads(${SERVER_BINARY})
+config_zlib(${SERVER_BINARY})
+config_enet(${SERVER_BINARY})
 config_net(${SERVER_BINARY})
 config_rpc(${SERVER_BINARY})
 config_util(${SERVER_BINARY})
