--- a/inexor/ui/CMakeLists.txt
+++ b/inexor/ui/CMakeLists.txt
@@ -11,8 +11,19 @@ include_directories(${CEF_INCLUDE_DIRS})
 declare_module(ui .)
 add_lib(ui)
 
+# Pulled in by including cube.h
+config_enet(module_ui NOLINK)
+config_sdl(module_ui NOLINK)
+
 function(config_ui targ)
   message(STATUS "Configuring ${targ} with ui")
+  if (";${ARGN};" MATCHES ";NOLINK;")
+    set(NOLINK "NOLINK")
+  endif()
+
   include_directories(${CEF_INCLUDE_DIRS})
-  target_link_libs(${targ} module_ui ${CEF_LIBS} module_util)
+  target_link_libs(${targ} module_ui ${CEF_LIBS} module_util ${NOLINK})
+
+  config_enet(${targ} ${NOLINK})
+  config_sdl(${targ} ${NOLINK})
 endfunction()
