GCC 5.1 adds a new C++11 ABI; Use the old one on mingw
We use the old one, since we bundle dependencies ourself and
we want to make sure, these dependencies also stay
compatible with older compilers.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,6 +118,14 @@ if(OS_LINUX OR (OS_WINDOWS AND NOT MSVC))
     # -Wl,--gc-sections               = Remove unused code resulting from -fdata-sections and -function-sections
     set(I_LINKER_FLAGS_RELEASE    "-Wl,-O1 -Wl,--as-needed -Wl,--gc-sections")
 
+    if (OS_WINDOWS)
+      # GCC 5.1 Introduces a new C++11 ABI; make sure we use
+      # the old one for compatibility with older compilers and
+      # for compatibility with our precompiled libs
+      # TODO: Make configurable
+      set(I_CXX_COMPILER_FLAGS "${I_CXX_COMPILER_FLAGS} -D_GLIBCXX_USE_CXX11_ABI=0")
+    endif()
+
     if(X64)
         # 64-bit architecture.
         set(I_COMPILER_FLAGS        "${I_COMPILER_FLAGS} -m64 -march=x86-64")
