remove usage of gl immediate mode
this commit introduces a strict way of using VBO's for anything gui related (and other stuff) instead e.g. of the deprecated glBegin()..glEnd().

--- a/inexor/client/CMakeLists.txt
+++ b/inexor/client/CMakeLists.txt
@@ -7,6 +7,7 @@ prepend(CLIENT_SOURCES_ENGINE ${SOURCE_DIR}/engine
     console.cpp
     decal.cpp
     dynlight.cpp
+    glemu.cpp
     grass.cpp
     main.cpp
     material.cpp
