Update default ports and other server configs

--- a/server-init.cfg
+++ b/server-init.cfg
@@ -5,14 +5,14 @@
 // serverip N.N.N.N
 
 // optional specific port for server to use
-// serverport 28785
+// serverport 31415
 
 // maximum number of allowed clients
-maxclients 8
+maxclients 12
 
 // maximum number of bots a master can add - admins are unaffected by this limit
 // set to 0 to disallow bots
-serverbotlimit 32
+serverbotlimit 16
 
 // controls whether or not the server is intended for "public" use
 // when set to 0, allows "setmaster 1" and locked/private mastermodes (for coop-editing and such)
@@ -21,7 +21,7 @@ serverbotlimit 32
 publicserver 0
 
 // description server shows for the server browser
-serverdesc "Bomberman Server Simulation"
+serverdesc "Inexor Server Simulation"
 
 // password required to connect to the server
 // generally unnecessary unless you really don't want anyone connecting to your server
@@ -41,7 +41,7 @@ updatemaster 1
 
 // the hostname and port of the masterserver (default: master.inexor.org)
 // mastername master.inexor.org
-// masterport 28787
+// masterport 31416
 
 // optional message of the day to send to players on connect
 // servermotd "..."
@@ -72,13 +72,12 @@ ffamaps = [
 cartel
 ]
 capturemaps = [
-dust6
+dust6 pandora
 ]
 ctfmaps = [
-dust6
+dust6 pandora
 ]
 spmaprot = [
-mpsp6a mpsp6b mpsp6c mpsp9a mpsp9b mpsp9c mpsp10 lost level9
 ]
 
 maprotationreset
