--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,4 +47,4 @@ on_success: #we atm do not use it as test_script: bc if it fails then it signals
   # run the test executable
   - cmd: if "%platform%"=="Win32" set "inexor_platform_name=win32"
   - cmd: if "%platform%"=="x64"   set "inexor_platform_name=win64"
-  - cmd: bin\windows\%inexor_platform_name%\unit_tests.exe
+  - cmd: tool\appveyor-workaround.bat
