deploy windows nightlies via appveyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-version: 1.0.{build}
+version: 0.{build}
 clone_depth: 1
 clone_folder: C:\projects\inexor-game
 
@@ -40,11 +40,33 @@ build:
   # MSBuild verbosity level (quiet|minimal|normal|detailed)
   verbosity: normal
 
+after_build: # this is actually partly our before_deploy, but appveyor doesnt like that with dynamic artifacts
+  
+  - cmd: cd C:\projects\inexor-game\
+  # We need to install the solution first
+  - cmd: MSBuild build\install.vcxproj /t:build
+  # create the nightly bundle .zip
+  - cmd: tool\appveyor_create_nightly.bat
+
+artifacts:
+  - path: firstvsnightly.zip
+    name: first
+
+before_deploy:
+  - ps: foreach($artifactName in $artifacts.keys) { $artifacts[$artifactName] }
+deploy:
+    # push our nightly bundle via ftp
+  - provider: FTP
+    protocol: ftp
+    host: inexor.org
+    username:
+      secure: rpQyxcVaaqNxDvYQlGP/eA==
+    password:
+      secure: aBNw6S6n1MqCfw/0S2vhDA==
+
+
+# Note: on_success gets executed last
 on_success: #we atm do not use it as test_script: bc if it fails then it signals a failed build
   - cmd: cd C:\projects\inexor-game\
-  # We (probably) need to install the solution first
-  - cmd: MSBuild build\install.vcxproj /t:build
-  # run the test executable
-  - cmd: if "%platform%"=="Win32" set "inexor_platform_name=win32"
-  - cmd: if "%platform%"=="x64"   set "inexor_platform_name=win64"
-  - cmd: tool\appveyor-workaround.bat
+  # run the unit test executable.
+  - cmd: tool\appveyor_test.bat
