Propperly enhance the fix. This will make inexor to compile on any system, thus it does not solve the known bug..

--- a/inexor/ui/CMakeLists.txt
+++ b/inexor/ui/CMakeLists.txt
@@ -5,10 +5,11 @@ find_libs(CEF_LIBS cef_dll_wrapper LIB cef)
 find_path(CEF_INCLUDE_DIRS include/cef_app.h)
 
 find_library(UDEV_LIBS udev)
-set(CEF_LIBS ${UDEV_LIBS} ${CEF_LIBS})
+find_path(UDEV_INCLUDE_DIR libudev.h)
 # UI MODULE
 
 include_directories(${CEF_INCLUDE_DIRS})
+include_directories(${UDEV_INCLUDE_DIR})
 
 declare_module(ui .)
 add_lib(ui)
@@ -24,7 +25,9 @@ function(config_ui targ)
   endif()
 
   include_directories(${CEF_INCLUDE_DIRS})
+  include_directories(${UDEV_INCLUDE_DIR})
   target_link_libs(${targ} module_ui ${CEF_LIBS} module_util ${NOLINK})
+  target_link_libs(${targ} module_ui ${UDEV_LIBS} module_util ${NOLINK})
 
   config_enet(${targ} ${NOLINK})
   config_sdl(${targ} ${NOLINK})
