--- a/appveyor.yml
+++ b/appveyor.yml
@@ -57,6 +57,15 @@ deploy:
       secure: rpQyxcVaaqNxDvYQlGP/eA==
     password:
       secure: aBNw6S6n1MqCfw/0S2vhDA==
+    # push release binaries to GitHub if tag gets created (and create a release draft)
+  - provider: GitHub
+    auth_token:
+      secure: vIfb9LX3nWCSRefUqY4JJL3hSosnPgKAbmGejFBL+C9GtHJKSuPLU6aMCrR79hPM
+    draft: true
+    prerelease: true
+    on:
+      branch: master                 # release from master branch only
+      appveyor_repo_tag: true        # deploy on tag push only
 
 
 # Note: on_success gets executed last
