cmake: ignore stupid ms warning
caused by stdheaders from microsoft

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -227,8 +227,9 @@ if(OS_WINDOWS)
         # /W2                                   = Warning level 2
         # /wd"4305"                             = Ignore "truncation from 'double' to 'float'" warning
         # /wd"4251"                             = Ignore "class 'type' needs to have dll-interface .." warning
+        # /wd"4091"                             = Ignore "typedef .. where no variable gets declared ingored" warning
         # /wd"4996"                             = Ignore "Function call with parameters that may be unsafe" warning
-        set(I_COMPILER_FLAGS          "-MP -Gy -Zi -fp:fast -EHsc -W2 -wd\"4305\" -wd\"4251\" -wd\"4996\"")
+        set(I_COMPILER_FLAGS          "-MP -Gy -Zi -fp:fast -EHsc -W2 -wd\"4305\" -wd\"4251\" -wd\"4996\" -wd\"4091\"")
         # /MTd                                  = Multithreaded debug runtime
         # /Od                                   = Disable optimizations
         # /RTC1                                 = Enable basic run-time checks
