created a small console interface for version control

--- a/inexor/client/CMakeLists.txt
+++ b/inexor/client/CMakeLists.txt
@@ -51,9 +51,13 @@ prepend(CLIENT_SOURCES_FPSGAME ${SOURCE_DIR}/fpsgame
     waypoint.cpp
     weapon.cpp)
 
+prepend(CLIENT_SOURCES_VERSIONCONTROL ${SOURCE_DIR}/versioncontrol
+    versioncontrol.cpp)
+
 set(CLIENT_SOURCES
   ${SHARED_MODULE_SOURCES}
   ${CLIENT_SOURCES_ENGINE}
+  ${CLIENT_SOURCES_VERSIONCONTROL}
   ${CLIENT_SOURCES_FPSGAME} CACHE INTERNAL "")
 
 if(OS_MACOSX)
