--- a/inexor/client/CMakeLists.txt
+++ b/inexor/client/CMakeLists.txt
@@ -73,3 +73,5 @@ config_net(${CLIENT_BINARY})
 config_rpc(${CLIENT_BINARY})
 config_util(${CLIENT_BINARY})
 config_ui(${CLIENT_BINARY})
+config_geom(${CLIENT_BINARY})
+config_flowgraph(${CLIENT_BINARY})
